# how_to_do_mcp

./: .gitignore  README.md  README.ru.md  for_gitignore.toml  how_to_do.json  how_to_do.py  how_to_do.ru.json  how_to_do_gitignore.toml  install.sh  installer.py  pyproject.toml  test_cursor_integration.py  test_generate_gitignore.py  test_how_to_do.py  test_install_script.py  test_installer.py  test_integration.py
.features/: gitignore_toml_merge_checklist.md
.github/workflows/: release.yml
docs/: gitignore_toml_format.md
examples/: user_gitignore_example.toml
tests/: test_cursor_integration.py  test_generate_gitignore.py  test_how_to_do.py
